ecmascript/parser/tests/typescript-errors/tsc/classes/classDeclarations/classAbstractKeyword/classAbstractCrashedOnce/input.ts.stderr
error: Expected ident
 --> $DIR/tests/typescript-errors/tsc/classes/classDeclarations/classAbstractKeyword/classAbstractCrashedOnce/input.ts:8:5
  |
8 |     }
  |     ^

